fix linespacing + lower opacity of filterbutton when button not relevant

--- a/style.css
+++ b/style.css
@@ -20,71 +20,6 @@
 
 }
 
-.toggle-control {
-
-    position: relative; 
-    padding-left: 40px;
-    cursor: pointer;
-    font-size: 10px;
-
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-.toggle-control input {
-    opacity: 0;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-}
-
-.toggle-control.consument input:checked ~ .control {
-    background-color: #93B1EA;
-}
-
-.toggle-control.energie_leverancier input:checked ~ .control {
-    background-color: #93B1EA;
-}
-
-.toggle-control.netbeheerder input:checked ~ .control {
-    background-color: #93B1EA;
-}
-
-.toggle-control.original input:checked ~ .control {
-    background-color: var(--shade1);
-}
-
-.toggle-control input:checked ~ .control:after {
-    left: 17.5px;
-}
-
-.toggle-control .control {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 30px;
-    width: 45px;
-    border-radius: 25px;
-    background-color: lightgrey;
-    transition: background-color 0.20s ease-in;
-}
-
-.toggle-control .control:after {
-    content: "";
-    position: absolute;
-    left: 2.5px;
-    top: 2.5px;
-    width: 25px;
-    height: 25px;
-    border-radius: 25px;
-    background-image: url("/assets/close.png");
-    background: white;
-    transition: left 0.20s ease-in;
-    
-}
-
 body {
     font-family: 'Nunito', sans-serif;
     font-size: 14px;
@@ -92,6 +27,7 @@ body {
     margin: 0;
     background-color: var(--grey);
     color: #343a40;
+    line-height: 1.9;
 }
 
 p {
@@ -107,7 +43,7 @@ p {
     position: fixed;
     margin-left: 60%;
     padding: 10px 50px 50px 50px;
-    
+
     background-color: #fafafa;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
 }
@@ -249,7 +185,6 @@ p {
     margin-top: 0.1em;
     color: white;
 }
-
 
 
 .filterbox {
@@ -474,7 +409,7 @@ highlight7 {
 
 .legal-list ol li {
     counter-increment: clause;
-    
+
 }
 
 .legal-list ol li:before {
@@ -693,13 +628,20 @@ highlight7 {
 .card {
     border: 1px solid var(--shade2);
     margin: 5px;
-    padding: 20px 20px 20px 20px;
 }
 
 .card.main-card {
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.1);
     border-radius: 15px;
     border: 0px;
+    padding: 20px 20px 20px 20px;
+}
+
+.card.filter-card {
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.1);
+    border-radius: 15px;
+    border: 0px;
+    padding: 15px 15px 15px 15px;
 }
 
 .card-header {
@@ -723,7 +665,7 @@ card-header-title {
 }
 
 .bi-file-earmark-arrow-down {
-    margin-top:15px;
+    margin-top: 15px;
 }
 
 .btn-primary {
@@ -737,4 +679,68 @@ card-header-title {
     align-items: baseline;
 }
 
+.toggle-control {
+
+    position: relative;
+    padding-left: 40px;
+    cursor: pointer;
+    font-size: 10px;
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.toggle-control input {
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.toggle-control.consument input:checked ~ .control {
+    background-color: #93B1EA;
+}
+
+.toggle-control.energie_leverancier input:checked ~ .control {
+    background-color: #93B1EA;
+}
+
+.toggle-control.netbeheerder input:checked ~ .control {
+    background-color: #93B1EA;
+}
+
+.toggle-control.original input:checked ~ .control {
+    background-color: var(--shade1);
+}
+
+.toggle-control input:checked ~ .control:after {
+    left: 17.5px;
+}
+
+.toggle-control .control {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 30px;
+    width: 45px;
+    border-radius: 25px;
+    background-color: lightgrey;
+    transition: background-color 0.20s ease-in;
+}
+
+.toggle-control .control:after {
+    content: "";
+    position: absolute;
+    left: 2.5px;
+    top: 2.5px;
+    width: 25px;
+    height: 25px;
+    border-radius: 25px;
+    background-image: url("/assets/close.png");
+    background: white;
+    transition: left 0.20s ease-in;
+
+}
 
